--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,24 @@ jobs:
       - uses: "shivammathur/setup-php@v2"
         with:
           php-version: "8.2"
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x"
-      - name: Install npm dependencies
-        run: npm install
-      - name: Run build task
-        run: npm run production
+      # - name: Install Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: "16.x"
+      # - name: Install npm dependencies
+      #   run: npm install
+      # - name: Run build task
+      #   run: npm run production
+      - name: Setup SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          echo "Host your-server-ip" >> ~/.ssh/config
+          echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+          echo "  IdentitiesOnly yes" >> ~/.ssh/config
+      - name: Remove ED25519 Key (if exists)
+        run: ssh-add -d ~/.ssh/id_ed25519 || true
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         env:
