--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,10 @@ jobs:
           echo "  IdentitiesOnly yes" >> ~/.ssh/config
       - name: Remove ED25519 Key (if exists)
         run: ssh-add -d ~/.ssh/id_ed25519 || true
+      - name: Delete Known Hosts (if exists)
+        run: |
+          rm -f ~/.ssh/known_hosts
+          touch ~/.ssh/known_hosts
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         env:
@@ -39,6 +43,7 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          ARGS: "-rltgoDzvO"
+          SCRIPT_BEFORE: ls
+          ARGS: "-avz --delete"
           EXCLUDE: "/.git/, /.github/, /.hygen/, /node_modules/"
           TARGET: public_html/wp-content/themes/tailpress-master
