--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          SCRIPT_BEFORE: ls
           ARGS: "-avz --delete"
           EXCLUDE: "/.git/, /.github/, /.hygen/, /node_modules/"
           TARGET: public_html/wp-content/themes/tailpress-master
