--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       #   run: npm install
       # - name: Run build task
       #   run: npm run production
+      - name: Add Server to Known Hosts
+        run: ssh-keyscan -H ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
       - name: Setup SSH Key
         run: |
           mkdir -p ~/.ssh
@@ -45,7 +47,6 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          SCRIPT_BEFORE: ls
           ARGS: "-avz --delete"
           EXCLUDE: "/.git/, /.github/, /.hygen/, /node_modules/"
           TARGET: public_html/wp-content/themes/tailpress-master
