--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,7 @@ jobs:
       # - name: Install npm dependencies
       #   run: npm install
       # - name: Run build task
-      #   run: npm run production
-      - name: Delete Known Hosts (if exists)
-        run: |
-          rm -f ~/.ssh/known_hosts
-          touch ~/.ssh/known_hosts
+      #   run: npm run productio
       - name: Setup SSH Key
         run: |
           mkdir -p ~/.ssh
