--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           ARGS: "-avz --delete"
           EXCLUDE: "/.git/, /.github/, /.hygen/, /node_modules/"
-          TARGET: public_html/wp-content/themes/tailpress-master
+          TARGET: domains/triahertomo.me/public_html/wp-content/themes/tailpress-master
